--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 #body2{
     background-image: url(background-image.png);
     background-color: #ffffff;
+    background-attachment: fixed;
     font-family: "Trirong", serif;
 }
 .sec1 {
